# icpac-igad-booking

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  LOCAL_DEVELOPMENT_NOTES.md  README.md  SETUP.md  STAGING-DEPLOYMENT.md  SYSTEM_DOCUMENTATION.md  Untitled.ipynb  deploy-staging.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  south_sudan_forest_map.html
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
attached_assets/: Pasted--BOOKING-DATA-Booking-room-id-16-Boardroom-Executive-Wing-USING-AUTHORITATIVE-room-id-1-1758974286272_1758974286274.txt  Pasted-69-10-isAuthenticated-is-assigned-a-value-but-never-used--1758971603868_1758971603869.txt  Pasted-ProgrammingError-at-django-admin-column-auth-user-is-email-verified-does-not-exist-LINE-1-join-1758964811993_1758964811994.txt  Pasted-ProgrammingError-at-relation-security-login-attempts-does-not-exist-LINE-1-SELECT-COUNT-AS--1758963127738_1758963127739.txt  Pasted-Watching-for-file-changes-with-StatReloader-Watching-for-file-changes-with-StatReloader-Performing-s-1758962071375_1758962071376.txt
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: CLOUD_DEPLOYMENT_GUIDE.md  INSTALLATION.md  MANUAL-SERVER-DEPLOYMENT.md  README-DEPLOYMENT.md
icpac-booking-backend/: .env
icpac-booking-frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
icpac-booking-system/: .gitignore  README.md  docker-compose.yml  package-lock.json
icpac-igad-booking/: .env.example  .env.staging.template  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DUAL_FRONTEND_SETUP.md  LICENSE  README.md  SETUP.md  (+6 more)
(+51 files in other folders)
