[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-filter==23.5",
    "django==5.0.7",
    "pillow==10.2.0",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "channels==4.0.0",
    "celery==5.3.4",
    "whitenoise==6.6.0",
    "psycopg2-binary==2.9.9",
    "python-decouple==3.8",
    "gunicorn==21.2.0",
    "dj-database-url==2.1.0",
    "djangorestframework-simplejwt==5.3.0",
    "channels-redis==4.2.0",
    "redis==5.0.1",
    "wagtail>=6.0.6",
    "django-otp>=1.6.1",
    "qrcode>=8.2",
    "phonenumbers>=9.0.15",
    "django-phonenumber-field>=8.1.0",
]
